startups/carte-jeune-engage/raw/clusters/ovh-prod/allow-namespace-metabase-access.netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-namespace-metabase-access
  namespace: carte-jeune-engage
spec:
  policyTypes:
  - Ingress
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: startup-carte-jeune-engage--metabase-prod
